--- a/index.css
+++ b/index.css
@@ -22,3 +22,20 @@
 .modal {
     display: block;
 }
+
+.phone-enter-active, .phone-leave-active {
+    transition: all 0.5s;
+}
+
+.phone-enter, .phone-leave-to {
+    transform: translateX(50px);
+    opacity: 0;
+}
+
+.modal-enter-active, .modal-leave-active {
+    transition: all 0.5s;
+}
+
+.modal-enter, .modal-leave-to {
+    transform: translateY(-100px);  
+}
